err.txt
++ test_all.cpp -I/usr/realtime/include -I rtai_thread -o test_all -L/usr/realtime/lib
In file included from rtai_thread/rtai_thread.h:10:0,
                 from test_all.cpp:1:
rtai_thread/rtai_thread_detail.hpp:221:63: error: wrong number of template arguments (1, should be 2)
                 boost::is_same<typename decay<F>::type, thread>::value,
                                                               ^
In file included from /usr/local/include/boost/type_traits/is_same.hpp:26:0,
                 from /usr/local/include/boost/type_traits/intrinsics.hpp:218,
                 from /usr/local/include/boost/type_traits/is_convertible.hpp:15,
                 from /usr/local/include/boost/thread/detail/move.hpp:13,
                 from /usr/local/include/boost/thread/lock_types.hpp:11,
                 from rtai_thread/rtai_mutex.hpp:13,
                 from rtai_thread/rtai_thread.h:4,
                 from test_all.cpp:1:
/usr/local/include/boost/type_traits/is_same.hpp:31:1: error: provided for ‘template<class T, class U> struct boost::is_same’
 BOOST_TT_AUX_BOOL_TRAIT_DEF2(is_same,T,U,false)
 ^
In file included from rtai_thread/rtai_thread.h:10:0,
                 from test_all.cpp:1:
rtai_thread/rtai_thread_detail.hpp:222:24: error: template argument 1 is invalid
                 dummy* >::type=0
                        ^
rtai_thread/rtai_thread_detail.hpp:311:84: error: wrong number of template arguments (1, should be 2)
         , typename boost::disable_if<boost::is_same<typename decay<F>::type, thread>, dummy* >::type=0
                                                                                    ^
In file included from /usr/local/include/boost/type_traits/is_same.hpp:26:0,
                 from /usr/local/include/boost/type_traits/intrinsics.hpp:218,
                 from /usr/local/include/boost/type_traits/is_convertible.hpp:15,
                 from /usr/local/include/boost/thread/detail/move.hpp:13,
                 from /usr/local/include/boost/thread/lock_types.hpp:11,
                 from rtai_thread/rtai_mutex.hpp:13,
                 from rtai_thread/rtai_thread.h:4,
                 from test_all.cpp:1:
/usr/local/include/boost/type_traits/is_same.hpp:31:1: error: provided for ‘template<class T, class U> struct boost::is_same’
 BOOST_TT_AUX_BOOL_TRAIT_DEF2(is_same,T,U,false)
 ^
In file included from rtai_thread/rtai_thread.h:10:0,
                 from test_all.cpp:1:
rtai_thread/rtai_thread_detail.hpp:311:94: error: template argument 1 is invalid
         , typename boost::disable_if<boost::is_same<typename decay<F>::type, thread>, dummy* >::type=0
                                                                                              ^
In file included from /usr/local/include/boost/thread/lock_types.hpp:11:0,
                 from rtai_thread/rtai_mutex.hpp:13,
                 from rtai_thread/rtai_thread.h:4,
                 from test_all.cpp:1:
rtai_thread/rtai_thread_detail.hpp:597:5: error: ‘enable_move_utility_emulation’ is not a class template
     BOOST_THREAD_DCL_MOVABLE(thread)
     ^
rtai_thread/rtai_thread_detail.hpp:597:5: error: explicit specialization of non-template ‘rtai_thread::enable_move_utility_emulation’
     BOOST_THREAD_DCL_MOVABLE(thread)
     ^
make: *** [all] Error 1
root@ubuntu:/home/xgwang/ws/rtai_test/playground#